@@ -216,3 +216,8 @@ seablock.lib.hide_item('cobalt-plate')
 if mods['cargo-ships'] then
   seablock.lib.hide_item('oil_rig')
 end
+
+-- Swap gold for platinum
+seablock.lib.substingredient('processing-electronics', 'gilded-copper-cable', 'angels-wire-platinum', 10)
+seablock.lib.substingredient('module-processor-board-3', 'gold-plate', 'angels-plate-platinum', nil)
+bobmods.lib.tech.add_prerequisite('advanced-electronics-3', 'angels-platinum-smelting-1')
